<resources>
    <string name="app_name">Caira15</string>
    <string name="title_activity_instrucciones">Instrucciones</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="futuro_fragment">Caira conecta estudiantes con instituciones educativas. En un mundo en constante cambio, la educación debe prepararnos para adaptarnos y encontrar nuestro camino</string>
    <string name="futuro_fragment_titulo">Hacemos realidad el futuro de la educación</string>

    <string name="estudiantes_fragment">
        Pruébate en nuestro laboratorio y conócete a ti mismo como nunca antes habías creído posible.\n
        Utiliza Caira como una herramienta para conocer más personas con las mismas inquietudes que tú y alcanza tu mejor versión. Accede a formación exclusiva, aprende y conoce a tu mejor yo.</string>
    <string name="estudiantes_fragment_titulo">Conócete más se mejor. Conecta, aprende, crece</string>
    <string name="estudiantes_fragment_subtitulo">ESTUDIANTES</string>


    <string name="universidades_fragment">
        Diseña un perfil a medida y crea contenido de todo tipo que te permitirá que los estudiantes te conozcan, interactúen contigo y te escojan como la mejor opción.\n
        Accede a nuestro dashboard y podrás tener un control absoluto de todo lo que ocurre en tu red. Proporcionamos información real proveniente de las métricas de tus usuarios para que puedas mejorar constantemente tu desempeño.</string>

    <string name="tit_form_login">Sign In Or Join</string>
    <string name="btn_sign_in">LOG IN</string>
    <string name="btn_join">REGISTER</string>
    <string name="email_addres">Email</string>
    <string name="password">Password</string>
    <string name="universidades_fragment_titulo">Un mundo de oportunidades educativas</string>
    <string name="universidades_fragment_subtitulo">UNIVERSIDADES</string>
    <string name="facebook">facebook</string>
    <string name="google">Google</string>
    <string name="forgot">He olvidado mi contraseña</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="btnRegister">Register</string>
    <string name="btn_login">Login</string>
    <string name="emailError">email requerido</string>
    <string name="passwordError">password requerido</string>
    <string name="title_activity_bodyapp">BodyappActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="opportunities">opportunities</string>
    <string name="contacts">Contacts</string>
    <string name="descripcion_app">Descripcion de la app</string>
    <string name="username">username</string>
    <string name="account_settings">Account Settings</string>
    <string name="social_profile">Social Profile</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="center">center</string>
    <string name="studies">Studies</string>
    <string name="location">Location</string>
    <string name="degree">Degree</string>
    <string name="btn_search">Search</string>
    <string name="btn_search_course">Search course by ...</string>
    <string name="btn_close">Cancel</string>


</resources>